Added pprint, first version

--- a/build.xml
+++ b/build.xml
@@ -104,6 +104,10 @@
       <arg value="clojure.test"/>
       <arg value="clojure.test.tap"/>
       <arg value="clojure.test.junit"/>
+      <arg value="clojure.pprint"/>
+      <arg value="clojure.pprint.column-writer"/>
+      <arg value="clojure.pprint.pretty-writer"/>
+      <arg value="clojure.pprint.utilities"/>
     </java>
   </target>
 
